# c-resource-mgmt

./: .gitignore  README.md  const_pointer.md  release.md  sizeof.md  struct.md  struct_declaration.md
src/: CMakeLists.txt  cast_misalignment.c  check_behavior.sh  const_pointer.c  double_close.c  double_fclose.c  double_free.c  fclose.c  null_close.c  null_fclose.c  null_free.c  sizeof.c  struct.c
