cmake_minimum_required(VERSION 3.16)
project(c-resource-mgmt C)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2 -Wall -fstack-protector-strong")
add_executable(__check_double_free__   double_free.c)
add_executable(__check_double_close__  double_close.c)
add_executable(__check_double_fclose__ double_fclose.c)
add_executable(__check_null_free__     null_free.c)
add_executable(__check_null_fclose__   null_fclose.c)
add_executable(__check_null_close__   null_close.c)